# saliency_map

./: .gitignore  CMakeLists.txt  run.sh
etc/: ex_01.cpp  ex_04.cpp
src/: .main.cpp.swp  GaussPyr.cpp  GaussPyr.h  LaplacianPyr.cpp  LaplacianPyr.h  OrientedPyr.cpp  OrientedPyr.h  fusion_methods.hpp  main.cpp
tools/: eval.py  eval.sh
tools/SaliencyEvaluationTool/: build.xml
tools/SaliencyEvaluationTool/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
tools/SaliencyEvaluationTool/nbproject/configs/: TEST_GroundTruthFILE.properties
